# RESTConnector

./: CMakeLists.txt  README.md  connector_manager.cpp  main.cpp
include/: connector_manager.h  curl_wrapper.h
